Edits images/ index.html recipes/

--- a/recipes/feta-and-tomato-pasta.html
+++ b/recipes/feta-and-tomato-pasta.html
@@ -6,8 +6,22 @@
 
 </head>
 <body>
-<h1>Feta and Tomato Pasta</h1>
+    <h1>Feta and Tomato Pasta</h1>
+        <img src="../images/feta.jpg" alt="Completed recipe with baked block of feta cheese and cherry tomatoes in a white baking dish">
+        <h2>This fresh and aromatic dish is sure to become a staple of your at home cooking.</h2>
+        <p>This recipe is one of those go to's for me. It is sure to make the whole house smell
+            good while cooking, and that only makes the end result that much more enjoyable.
+            The combonation of feta, cherry tomatoes, garlic, and olive oil always makes a house 
+            smell alive. Fresh ingredients are best, but even on a tighter budget this dish is sure
+            to make your mouth water!
+        </p>
 
+        <p>This may not appear to be the healthiest dish ever, and I'll be honest, its not the <em> best</em>
+        but it sure is close enough. Depending on your pasta choice the whole dish can be gluten free
+    on top of it already being vegetarian. It is a very simple dish to scale up or
+    down depending on how many poeple are going to be enjoying this dish. 
+    This feeds more than you might realize, so be prepared
+to pack some away for the next few days.</p>
 
 </body>
 
