--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="recipes/feta-and-tomato-pasta.html">Feta and Tomato Pasta</a>
     </body>
 </html>
