add images/ index.html recipes/

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="recipes/feta-and-tomato-pasta.html">Feta and Tomato Pasta</a></li>
 
-        <a href="recipes/feta-and-tomato-pasta.html">Feta and Tomato Pasta</a>
+        <li><a href="recipes/tacos.html">Beef Tacos</a></li>
+      </ul>
     </body>
 </html>
