--- a/recipes/feta-and-tomato-pasta.html
+++ b/recipes/feta-and-tomato-pasta.html
@@ -23,6 +23,23 @@
     This feeds more than you might realize, so be prepared
 to pack some away for the next few days.</p>
 
+<h2>Ingredients</h2>
+<ul>
+    <li>Cherry Tomatoes</li>
+    <li>Feta Cheese</li>
+    <li>Olive Oil</li>
+    <li>Salt</li>
+    <li>Pepper</li>
+    <li>Garlic Cloves</li>
+</ul>
+
+<h2>Steps</h2>
+<ol>
+    <li>Preheat Oven</li>
+    <li>Prepare ingredients</li>
+    <li>Bake</li>
+    <li>Eat</li>
+</ol>
 </body>
 
 </html>
