Add index.html style.css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <title>Easy at Home Recipes to Make for Your Significant Other</title>
         <meta charset="UTC-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-      <ul>
-        <li><a href="recipes/feta-and-tomato-pasta.html">Feta and Tomato Pasta</a></li>
+    <body class="background">
+        <h1 class="title">Odin Recipes Project</h1>
+      <ul >
+        <li><a class="link" href="recipes/feta-and-tomato-pasta.html">Feta and Tomato Pasta</a></li>
 
-        <li><a href="recipes/tacos.html">Beef Tacos</a></li>
+        <li><a class="link" href="recipes/tacos.html">Beef Tacos</a></li>
       </ul>
+
+      <img src="./images/feta.jpg" alt="Feta Pasta">
+      <img class="tacos" src="./images/tacos.jpeg" alt="Tacos">
     </body>
 </html>
